# gpkg_io

./: .gitignore  CMakeLists.txt  README.md  sqlite3_CMakeLists.in
cmake/: gpkgConfig.cmake.in  gpkgioConfig.cmake.in
docs/: CMakeLists.txt  mainpage.md
gpkg_io_src/: CMakeLists.txt  bytebuffer.h  gpkg_enums.h  gpkg_geom.cc  gpkg_geom.h  gpkg_geom_linestring.h  gpkg_geom_multipoint.cc  gpkg_geom_multipoint.h  gpkg_geom_point.cc  gpkg_geom_point.h  gpkg_geom_polygon.cc  gpkg_geom_polygon.h  gpkg_io.cc  gpkg_io.h  wm_endian.h
include/gpkgio/: gpkgio.h
src/: CMakeLists.txt  gpkgio.cc  utils.cc  utils.h
test/: CMakeLists.txt  gpkg_geom_linestring_test.cc  gpkg_geom_multipoint_test.cc  gpkg_geom_point_test.cc  gpkg_geom_polygon_test.cc  gpkg_geom_test.cc  gpkg_geom_test.h  gpkgio_test.cc
tests/: CMakeLists.txt  gpkgio_test.cc
